Fix dashboard translation

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -14,8 +14,7 @@
     <mat-card class="card-left">
       <div class="desc">
         <h2>
-          {{ "dashboard.room" | translate }}
-          <strong>{{ "dashboard.waiting" | translate }}</strong>
+          {{ "dashboard.waitingRoom" | translate }}
         </h2>
         <p>
           {{ "dashboard.consultationsListInAwaitingTreatment" | translate }}
