--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,8 +6,8 @@ body {
 }
 
 @import "@angular/material/theming";
+@import "assets/fonts/fonts";
 // Plus imports for other components in your app.
-
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
